Tests/Runtime2/Error/GoalFirst/.build/alwaysfails.pr
{
  "name": "AlwaysFails",
  "description": "No goal was provided. Please send the %goalForLlm% content (or describe the task you want completed) so I can generate the required JSON plan.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "add 1 to %goalFirstAttempts%, write to %goalFirstAttempts%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "list",
          "action": "add",
          "parameters": [
            {
              "name": "ListName",
              "value": "%goalFirstAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": 1,
              "type": "long"
            }
          ],
          "defaults": [
            {
              "name": "atindex",
              "value": -1,
              "type": "int"
            }
          ]
        },
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%goalFirstAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": "%goalFirstAttempts%",
              "type": "string"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ]
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022always fails\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Runtime2/Error/GoalFirst/AlwaysFails.goal",
  "prPath": "/Tests/Runtime2/Error/GoalFirst/.build/alwaysfails.pr",
  "hash": "20452d6d06df8961ba441d4dc18fc37c2e6dd04b2658568f70fb8b95f341268d",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}